# chatgpt-weaning-app

./: .gitignore  README.md  makefile
backend/: pyproject.toml  resources.py  schemas.py  services.py
frontend/: package-lock.json  package.json
frontend/public/: manifest.json
frontend/src/: App.css  App.js
