[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["dessertivore <landau.sophie@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.24.0"
fastapi = "^0.104.1"
pydantic = "^2.5.2"
openai = "^1.3.5"
makefile = "^1.1.0"
ruff = "^0.1.6"
black = "^23.11.0"
mypy = "^1.7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
